[package]
authors = ["Nando Lawson"]
categories = ["command-line-utilities", "games"]
description = "Trimmer for Nintendo GBA / DS ROMs"
edition = "2021"
exclude = [".devcontainer/", ".github/", "target/"]
keywords = ["cli", "ds", "gba", "rom", "trim"]
license = "GPL-3.0"
name = "romoxidizer"
readme = "README.md"
repository = "https://github.com/nandolawson/romoxidizer"
version = "0.0.0"

[dependencies]
sha2 = "0.10.8"

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[lints.rust]
future-incompatible = "deny"
keyword-idents = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
unused = "deny"
warnings = "deny"

[profile.dev]
codegen-units = 256
debug = true
incremental = true
lto = false
opt-level = 0
panic = "unwind"
strip = false

[profile.release]
codegen-units = 1
debug = "none"
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
