[package]
authors = ["Nando Lawson"]
categories = ["command-line-utilities", "games"]
description = "Trimmer for Nintendo GBA / DS ROMs"
edition = "2021"
exclude = [
    ".devcontainer/",
    ".github/",
    "target/",
    "CONTRIBUTING.md",
    "justfile",
]
keywords = ["cli", "ds", "gba", "rom", "trim"]
license = "GPL-3.0"
name = "romoxidizer"
readme = "README.md"
repository = "https://github.com/nandolawson/romoxidizer"
version = "0.0.0"

[dependencies]
sha2 = "0.10.8"

[build-dependencies]
winresource = "0.1.19"

[lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "deny", priority = 2 }
correctness = { level = "forbid", priority = 3 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = 2 }
style = { level = "warn", priority = -2 }
suspicious = { level = "forbid", priority = 3 }

[lints.rust]
future-incompatible = { level = "deny", priority = 3 }
keyword-idents = { level = "deny", priority = 2 }
let-underscore = { level = "deny", priority = 1 }
nonstandard-style = { level = "warn", priority = -2 }
refining-impl-trait = { level = "deny", priority = 1 }
rust-2018-compatibility = { level = "deny", priority = 2 }
rust-2018-idioms = { level = "deny", priority = 2 }
rust-2021-compatibility = { level = "forbid", priority = 3 }
rust-2024-compatibility = { level = "forbid", priority = 4 }
unused = { level = "warn", priority = -1 }
warnings = { level = "warn", priority = 0 }

[profile.dev]
codegen-units = 256
debug = true
incremental = true
lto = false
opt-level = 0
panic = "unwind"
strip = false

[profile.release]
codegen-units = 1
debug = "none"
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
